feat: add CustomDeepSeekChatModel, ImageTools, startup script, and GeneralAgent upgrades
- Add CustomDeepSeekChatModel for custom DeepSeek model configuration
- Add ImageTools for image generation tool support
- Add _startup.ps1 for one-click service startup
- Update GeneralAgentConfig with new agent tools configuration
- Update GeneralTools with enhanced tool capabilities
- Update AgentCallerService for improved agent routing
- Update application.yml with new model configuration
- Remove deprecated vite.config files
- Update frontend package-lock.json